--- a/SentryOperator.csproj
+++ b/SentryOperator.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="KubeOps" Version="7.4.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="YamlDotNet" Version="13.1.1" />
   </ItemGroup>
 
