--- a/config/crds/sentrydeployments_sentry_io.yaml
+++ b/config/crds/sentrydeployments_sentry_io.yaml
@@ -20,6 +20,12 @@ spec:
             properties:
               status:
                 type: string
+              message:
+                nullable: true
+                type: string
+              lastVersion:
+                nullable: true
+                type: string
             type: object
           spec:
             description: Specification of the kubernetes object.
@@ -45,18 +51,23 @@ spec:
                     type: string
                   image:
                     description: The image to use for Sentry
+                    nullable: true
                     type: string
                   snubaImage:
                     description: The image to use for Snuba
+                    nullable: true
                     type: string
                   relayImage:
                     description: The image to use for Relay
+                    nullable: true
                     type: string
                   symbolicatorImage:
                     description: The image to use for Symbolicator
+                    nullable: true
                     type: string
                   vroomImage:
                     description: The image to use for Vroom
+                    nullable: true
                     type: string
                   wal2JsonVersion:
                     description: The version of Wal2Json to use
@@ -84,182 +95,35 @@ spec:
               resources:
                 description: Override the default resource limits
                 nullable: true
-                properties:
-                  web:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  worker:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  cron:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  snuba:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  relay:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  consumer:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  ingest:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  forwarder:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  replacer:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
-                  geoIP:
-                    nullable: true
-                    properties:
-                      claims:
-                        items:
-                          properties:
-                            name:
-                              type: string
-                          type: object
-                        type: array
-                      limits:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                      requests:
-                        type: object
-                        x-kubernetes-preserve-unknown-fields: true
-                    type: object
                 type: object
-              certSecretName:
-                description: Override the name of the certificate secret
+                x-kubernetes-preserve-unknown-fields: true
+              certificate:
                 nullable: true
-                type: string
+                properties:
+                  install:
+                    nullable: true
+                    type: boolean
+                  certificateCRDName:
+                    description: Override the name of the Certificate CRD generated
+                    nullable: true
+                    type: string
+                  issuerName:
+                    description: Override the name of the issuer
+                    nullable: true
+                    type: string
+                  issuerKind:
+                    description: Override the kind of the issuer
+                    type: string
+                  secretName:
+                    description: Override the name of the certificate secret
+                    nullable: true
+                    type: string
+                  customHosts:
+                    description: Add additional hosts to the certificate
+                    items:
+                      type: string
+                    type: array
+                type: object
             type: object
         type: object
     served: true
