--- a/example.yaml
+++ b/example.yaml
@@ -34,6 +34,7 @@ spec:
     SENTRY_MAIL_HOST: ''
     REDIS_PORT: '6379'
     CLICKHOUSE_PORT: '9000'
+    CLICKHOUSE_HOST: 'clickhouse'
     SENTRY_MAX_EXTERNAL_SOURCEMAP_SIZE: ''
     GEOIPUPDATE_ACCOUNT_ID: ''
     GEOIPUPDATE_LICENSE_KEY: ''
